force-app/main/default/objects/CommercientSF__SalSalesPerson__c/CommercientSF__SalSalesPerson__c.object-meta.xml
<CustomObject>
    <label>Syspro Sales Person</label>
    <nameField>
        <label>Syspro Sales Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Sales Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>