force-app/main/default/objects/CommercientSF__SalSalesPerson__c/fields/CommercientSF__CommissionPct__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommissionPct__c</fullName>
    <label>Commission percentage</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>