force-app/main/default/objects/CommercientSF__SalSalesPerson__c/fields/CommercientSF__ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExternalKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>