force-app/main/default/objects/CommercientSF__SalSalesPerson__c/fields/CommercientSF__Name__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Name__c</fullName>
    <label>Salesperson name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>