force-app/main/default/objects/CommercientSF__SalSalesPerson__c/fields/CommercientSF__SalesActual12__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesActual12__c</fullName>
    <label>Monthly actual sales 12</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>