force-app/main/default/objects/CommercientSF__SalSalesPerson__c/fields/CommercientSF__SalesBudget11__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesBudget11__c</fullName>
    <label>Monthly budgeted sales 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>