force-app/main/default/objects/CommercientSF__SalSalesPerson__c/fields/CommercientSF__SalesBudget12__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesBudget12__c</fullName>
    <label>Monthly budgeted sales 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>